# Protype.AI

./: LICENSE  README.md  protype_ai_docs.md  system_architecture.md  نسخة ذاتية تنزيل المكاتب.rar
Docs/: GNN_Knowledge_Integration.md  ProtypeAI_Architecture.md  requirements.txt  startup_guide.md
Protype  z (web)/: protype_e0.db  user_actions.json  web_app.py
Protype A1o Web/: build_frontend.sh  modern_interface.py  protype_e0.db  search_engine.py
Protype S ( beta)/: celery_tasks.py  lib_setup.py  main.py  pyproject.toml  user_actions.json
Protype S ( beta)/templates/: index.html
Protype y0 (web)/: user_actions.json
Protype-S-ai/: advanced_memory.py  celery_tasks.py  database.py  knowledge_graph.py  learning_manager.py  multimodal_intelligence.py  pyproject.toml  symbolic_reasoning.py  temporal_awareness.py  visualization.py  web_app.py
Protype-S-ai (النسخة الاساسية)/: agent_state.json  autonomous_agent.py  graph_neural_network.py  learning_logs.json  main.py  protype_e0.db  self_reflection.py  symbolic_rules.json  temporal_data.json  user_actions.json
protype 0.02/: bot_data .json  bot_data.json  protype web.py
protype 0.02o/: protype 0.02.5o.py
protype AI/: main.py  visualization.py
protype C/: README.md  protype_e0.db  visualization.py  web_app.py
protype Q/: database.py  protype_e0.db  user_actions.json
protype e0.0/: Protype E0.py
protype x0 (web)/: celery_tasks.py  protype_e0.db  user_actions.json
نسخة ذاتية تنزيل المكاتب/: dashboard.py  install_dependencies.sh  learning_manager.py  protype s.py  requirements.txt  web_app.py
(+91 files in other folders)
